src/tests/golden/invalid_il/missing_terminator.il
il 0.1
func @missing_term() -> void {
entry:
  %x = iadd.ovf 1, 2
}
